add: event settings
